--- a/locales/es.yml
+++ b/locales/es.yml
@@ -20,6 +20,7 @@ label:
   about: Acerca de
   actions: Acciones
   already_account_question: ¿Ya tienes una cuenta?
+  app_name: Cutting Ninja
   blog: Blog
   cancel: Cancelar
   change_password: Cambiar la contraseña
