--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -20,6 +20,7 @@ label:
   about: À propos de
   actions: Actions
   already_account_question: Vous avez déjà un compte ?
+  app_name: Cutting Ninja
   blog: Blog
   cancel: Annuler
   change_password: Changez votre mot de passe
